; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ofed/librdmacm/extr_rsocket.c_ds_remove_qp.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ofed/librdmacm/extr_rsocket.c_ds_remove_qp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rsocket = type { i32* }
%struct.ds_qp = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { %struct.TYPE_2__* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rsocket*, %struct.ds_qp*)* @ds_remove_qp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ds_remove_qp(%struct.rsocket* %0, %struct.ds_qp* %1) #0 {
  %3 = alloca %struct.rsocket*, align 8
  %4 = alloca %struct.ds_qp*, align 8
  store %struct.rsocket* %0, %struct.rsocket** %3, align 8
  store %struct.ds_qp* %1, %struct.ds_qp** %4, align 8
  %5 = load %struct.ds_qp*, %struct.ds_qp** %4, align 8
  %6 = getelementptr inbounds %struct.ds_qp, %struct.ds_qp* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %9 = load %struct.ds_qp*, %struct.ds_qp** %4, align 8
  %10 = getelementptr inbounds %struct.ds_qp, %struct.ds_qp* %9, i32 0, i32 0
  %11 = icmp ne %struct.TYPE_2__* %8, %10
  br i1 %11, label %12, label %20

12:                                               ; preds = %2
  %13 = load %struct.ds_qp*, %struct.ds_qp** %4, align 8
  %14 = call i32* @ds_next_qp(%struct.ds_qp* %13)
  %15 = load %struct.rsocket*, %struct.rsocket** %3, align 8
  %16 = getelementptr inbounds %struct.rsocket, %struct.rsocket* %15, i32 0, i32 0
  store i32* %14, i32** %16, align 8
  %17 = load %struct.ds_qp*, %struct.ds_qp** %4, align 8
  %18 = getelementptr inbounds %struct.ds_qp, %struct.ds_qp* %17, i32 0, i32 0
  %19 = call i32 @dlist_remove(%struct.TYPE_2__* %18)
  br label %23

20:                                               ; preds = %2
  %21 = load %struct.rsocket*, %struct.rsocket** %3, align 8
  %22 = getelementptr inbounds %struct.rsocket, %struct.rsocket* %21, i32 0, i32 0
  store i32* null, i32** %22, align 8
  br label %23

23:                                               ; preds = %20, %12
  ret void
}

declare dso_local i32* @ds_next_qp(%struct.ds_qp*) #1

declare dso_local i32 @dlist_remove(%struct.TYPE_2__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
